@@ -1,6 +1,8 @@
 In progress - pre-release
     - Added Quantum Fourier transform example in "examples/qft.cpp"
     - Added a suite of stress tests in "stress_tests" (only for POSIX systems)
+    - Added rotations about X, Y and Z as member functions of qpp::Gates, 
+      as qpp::Gates::RX/Y/Z respectively
 Version 1.0 - 3 July 2018
     - Added full support for reversible classical circuits, added
       "classes/reversible.h" header file that contains the following classes:
